			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03g: *********************************

IMP/MAN (09/18/05, GVG) Gate generator for TSMC180

BUG: (09/18/05, DN) If we add 90-angle polysilicon arc to the unconnected end of 45-angle transistor in
    "Help|Make fake circuitry MoCMSO" example, we shall get a notch.
FIX: Do not use "canShrink" in "PortInst.updateShrinkage" until PrimitiveNodes can be drawn shortened
     in JElectric.

BUG: (09/18/05, DN) 45-angle arc is not shrinked properly in "Help|Make fake circuitry MoCMOS" example.
FIX: Add "PortInst.updateShrinkage" and "PortInst.checkShortening" methods which are improved verions of
    "ArcInst.updateShrinkage" and "ArcInst.checkShortening".

BUG: (09/18/05, DN) Expanded status of Cells which have '/' in name is not saved in preferences.
FIX: In Cell.loadExpandStatus and Cell.saveExpandStatus put "cellName.replace('/', ':')".

BUG: (09/18/05, DN) Compaction regression failed.
FIX: In ArcInst.copyConstraintsFrom insert copy angle as well. 

BUG: (09/16/05, RK) Fixed FillGenerator. It was placing Well outside Cell boundary on left and right. (Bugzilla# 551)

IMP: (09/16/05, SMR) Added another General preference: the portion of the screen
     that a cell must consume to NOT be greeked by the display system.

BUG: (09/16/05, SMR) Spice output removes apostrophies unnecessarily (Bug #546).
FIX: Allow them in parameter substitution of templates.

BUG: (09/16/05, DN) Inverse alphabatical order of net names.
FIX: In Network.addUserName put "<" instead of ">".

BUG: (09/16/05, DN) Sometimes constraint system swaps ends of modified ArcInst.
FIX: In constraint.LayoutCell use ArcInst.HEADEND and ArcInst.TAIEND .

IMP: (09/15/05, RK) FillGenerator modified to work for tsmc180. (Bugzilla# 545)

BUG: (09/15/05, DN) HierarchyEnumerator should choose user-defined name for nets shortened by resistor.